Changes since last push:
 - Fixed a bug where a value was uninitialized.

Known "features":
 - Holding down space means that it will attempt to jump whenever possible, 
rather than doing the "one press of space corresponds to one jump" that can feel more natural (in Terraria, the difference between equipping or not equipping a frog leg).
 - It is possible to step up a tile while jumping, to go up extra fast.
 - The strenth of gravity is independent of the world.
 - Attempting to go sideways into a wall will prevent you from falling down the side, because gravity means you collide with the top of the tile next to your feet, even though you can't physically stand on it. This can be fixed by handling collisions that only depend on one part of the velocity vector before handling ones that depend on both.
 - Things that move multiple tiles per second won't collide as if they were moving in a straight line. The best way to solve this may be to not allow anything to move that fast, possibly via multiple updates between renderings.
 - The spawn point sometimes puts the player on top of dirt. Spawning should be changed so it destroys any tiles in the way.

Known bugs:
 - Collision with the top of the map doesn't work right. This will probably be ignored after creating a clear solid unminable tile to go on the map borders.
 - Sometimes the player doesn't collide with a tile when they should. It always seems to happen somewhere around the very corner.

Soon to come (though likely not very soon):
 - More types of tiles
 - Trees!
 - Better map generation
 - Fixed collision detection
 - A more deliberate framerate
 - Better values for movement fields
 - Darkness that looks less rectangular