@@ -84,7 +84,9 @@ class Map {
     Location getSpritePlace(int x, int y) const;
 
     // Return the light at a square. 
-    Light getLight(int x, int y) const;
+    Light getSkyLight(int x, int y) const;
+
+    Light getBlockLight(int x, int y) const;
 
     // Returns the foreground tile pointer at x, y
     // 0, 0 is the bottom right
